--- a/css.css
+++ b/css.css
@@ -52,6 +52,17 @@ li {
     font-size: 20px;
 }
 
+#cv {
+    min-width: 600px;
+    min-height: 820px;
+    max-width: 50%;
+    max-height: 1000px;
+}
+img {
+    max-height: 500px;
+    max-width: 500px;
+}
+
  @media screen and (max-width: 600px){
      .screenshot {
          max-width: 100%;
@@ -63,6 +74,8 @@ li {
          text-align: center;
      }
  }
+
+
 
 @media screen and (max-width: 359px){
     .topnav a, .topnav b{
@@ -86,4 +99,17 @@ li {
         max-width:550px;
     }
 
+}
+
+@media screen and (min-width: 1200px){
+    #projects {
+        display: grid;
+        grid-template-columns: 600px 500px;
+        grid-gap: 10px;
+    }
+    #cv {
+        width: 300px;
+        height: 600px;
+        float: left;
+    }
 }
